--- a/.github/workflows/my-starter-workflow.yml
+++ b/.github/workflows/my-starter-workflow.yml
@@ -4,6 +4,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  call-reusable-workflow:
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      node: 14
+    
   build:
     runs-on: ubuntu-latest
 
